updates loading colors - fixes whitespace

--- a/src/base.css
+++ b/src/base.css
@@ -1,6 +1,5 @@
 :root {
   --color-blue: #07d;
-  --color-yellow: #ff5;
   --color-pink: #f8d;
   --color-gray: #ddd;
   --color-white: #fff;
